language support added, pb-highlight

--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -1,5 +1,7 @@
 {
     "myapp": {
-        "title": "Foo"
+        "title": "Foo",
+        "overwritten": "overwritten",
+        "erased": "erased"
     }
 }
