fixed spatia for overwritten words

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -1,6 +1,7 @@
 {
     "myapp": {
         "title": "Nietzsche Druckmanuskripte",
+        "over": "auf",
         "overwritten": "überschrieben",
         "erased": "radiert",
         "XXX_red": "unbekannte fremde Hand",
