using iiif instead of images in pb-facsimile

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -1,6 +1,7 @@
 {
     "myapp": {
         "title": "Nietzsche Druckmanuskripte",
+        "facsimile": "Faksimile",
         "over": "auf",
         "overwritten": "überschrieben",
         "erased": "radiert",
