--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -1,6 +1,7 @@
 {
     "myapp": {
         "title": "Foo",
+        "facsimile": "Facsimile",
         "overwritten": "overwritten",
         "over": "over",
         "erased": "erased",
