adaptions for GM ED

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -4,6 +4,8 @@
         "facsimile": "Faksimile",
         "over": "auf",
         "overwritten": "überschrieben",
+        "page": "Seite",
+        "edref-lb": "KGW/KSA Zeilenumbruch anzeigen",
         "erased": "radiert",
         "XXX_red": "unbekannte fremde Hand",
          "typesetter_pencil": "Schriftsetzer: Bleistift",
