--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -4,7 +4,9 @@
         "facsimile": "Facsimile",
         "overwritten": "overwritten",
         "over": "over",
+        "page": "Page",
         "erased": "erased",
+        "edref-lb": "show KGW/KSA line breaks",
         "XXX_red": "unknown foreign hand",
         "typesetter_pencil": "typesetter: pencil",
         "N-Archiv_red": "foreign hand: Nietzsche Archiv",
