--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -5,15 +5,25 @@
         "over": "auf",
         "overwritten": "überschrieben",
         "page": "Seite",
+        "choice-underline": "Korrekturen auf Transkription visualisieren",
+        "deletion-popover": "Popover bei Streichungen/Schraffuren anzeigen",
         "edref-lb": "KGW/KSA Zeilenumbruch anzeigen",
         "erased": "radiert",
         "XXX_red": "unbekannte fremde Hand",
-         "typesetter_pencil": "Schriftsetzer: Bleistift",
+        "typesetter_pencil": "Schriftsetzer: Bleistift",
+        "typesetter_red": "Schriftsetzer: roter Stift",
         "N-Archiv_red": "fremde Hand: Nietzsche Archiv",
         "N_pencil": "Nietzsche: Bleistift",
         "N_red": "Nietzsche: roter Stift",
         "N_brown": "Nietzsche: brauner Stift",
         "N_brown1": "Nietzsche: brauner Stift",
-        "GSA_pencil": "fremde Hand: GSA, Bleistift"
+        "GSA_pencil": "fremde Hand: GSA, Bleistift",
+        "hatching": "schraffiert",
+        "hatching-N_brown": "mit braunem Stift schraffiert",
+        "hatching-N_brown1": "mit braunem Stift schraffiert",
+        "deleted-N_brown": "mit braunem Stift schraffiert",
+        "deleted-N_brown1": "mit braunem Stift schraffiert",
+        "strikethrough-N_brown1": "mit braunem Stift gestrichen",
+        "strikethrough": "gestrichen"
     }
 }
