hands added, correction display fixed

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -16,16 +16,46 @@
         "N-Archiv_red": "fremde Hand: Nietzsche Archiv",
         "N_pencil": "Nietzsche: Bleistift",
         "N_red": "Nietzsche: roter Stift",
-        "N_brown": "Nietzsche: brauner Stift",
-        "N_brown1": "Nietzsche: brauner Stift",
+        "N_brown": "Nietzsche: braune Tinte",
+        "N_brown1": "Nietzsche: braune Tinte",
         "GSA_pencil": "fremde Hand: GSA, Bleistift",
         "hatching": "schraffiert",
-        "hatching-N_brown": "mit braunem Stift schraffiert",
-        "hatching-N_brown1": "mit braunem Stift schraffiert",
-        "deleted-N_brown": "mit braunem Stift schraffiert",
-        "deleted-N_brown1": "mit braunem Stift schraffiert",
-        "strikethrough-N_brown1": "mit braunem Stift gestrichen",
+        "hatching-N_brown": "mit brauner Tinte schraffiert",
+        "hatching-N_brown1": "mit brauner Tinte schraffiert",
+        "deleted-N_brown": "mit brauner Tinte schraffiert",
+        "deleted-N_brown1": "mit brauner Tinte schraffiert",
+        "strikethrough-N_brown1": "mit brauner Tinte gestrichen",
         "strikethrough-typesetter_black1": "vom Schriftsetzer gestrichen",
-        "strikethrough": "gestrichen"
-    }
+        "strikethrough": "gestrichen",
+        "hand": {
+			"GSA_pencil":"Bleistift (GSA)",
+			"GSA_pencil2":"Bleistift (GSA?)",
+			"Koeselitz_black":"schwarze Tinte, Köselitz",
+			"Koeselitz_blue":"Blaustift, Köselitz",
+			"Koeselitz_pencil":"Bleistift, Köselitz",
+			"Koeselitz_red":"Rotstift, Köselitz",
+			"Koeselitz_redInk":"rote Tinte, vermutlich Köselitz",
+			"N-Archiv_blue":"Blaustift (N-Archiv)",
+			"N-Archiv_orangeBrown":"Orangebraunstift (N-Archiv)",
+			"N-Archiv_pencil":"Bleistift (N-Archiv?)",
+			"N-Archiv_red":"Rotstift (N-Archiv)",
+			"N-Archiv_redInk":"rote Tinte (N-Archiv?)",
+			"N-Archiv_violet":"Violettstift (N-Archiv)",
+			"N_black1":"schwarze Tinte (1), N",
+			"N_black2":"schwarze Tinte (2), N",
+			"N_black3":"schwarze Tinte (3), N",
+			"N_black4":"schwarze Tinte (4), vermutlich N",
+			"N_blue":"Blaustift, N",
+			"N_brown1":"braune Tinte (1), N",
+			"N_brown2":"braune Tinte (2), N",
+			"N_pencil":"Bleistift, N",
+			"N_red":"Rotstift, N",
+			"typesetter_black1":"schwarze Tinte, N.N. (Druckerei)",
+			"typesetter_black2":"schwarze Tinte (Druckerei)",
+			"typesetter_blue":"Blaustift (Druckerei)",
+			"typesetter_pencil":"Bleistift (Druckerei)",
+			"typesetter_red":"Rotstift (Druckerei)",
+			"unknown_pencil":"Bleistift (Urheber unklar)" 
+        }
+    }   
 }
