--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -16,16 +16,46 @@
         "N-Archiv_red": "foreign hand: Nietzsche Archiv",
         "N_pencil": "Nietzsche: pencil",
         "N_red": "Nietzsche: red pen",
-        "N_brown": "Nietzsche: brown pen",
-        "N_brown1": "Nietzsche: brown pen",
+        "N_brown": "Nietzsche: brown ink",
+        "N_brown1": "Nietzsche: brown ink",
         "GSA_pencil": "foreign hand: GSA, pencil",
         "hatching": "hatching",
-        "hatching-N_brown": "hatching with brown pen",
-        "hatching-N_brown1": "hatching with brown pen",
-        "deleted-N_brown": "hatching with brown pen",
-        "deleted-N_brown1": "hatching with brown pen",
-        "strikethrough-N_brown1": "strikethrough with brown pen",
+        "hatching-N_brown": "hatching with brown ink",
+        "hatching-N_brown1": "hatching with brown ink",
+        "deleted-N_brown": "hatching with brown ink",
+        "deleted-N_brown1": "hatching with brown ink",
+        "strikethrough-N_brown1": "strikethrough with brown ink",
         "strikethrough-typesetter_black1": "strikethrough by the typesetter",
-        "strikethrough": "strikethrough"
+        "strikethrough": "strikethrough",
+        "hand": {
+	        "GSA_pencil":"pencil (GSA)",
+	        "GSA_pencil2":"pencil (GSA?)",
+	        "Koeselitz_black":"black ink (Koeselitz)",
+	        "Koeselitz_blue":"red pencil (Koeselitz)",
+	        "Koeselitz_pencil":"pencil (Koeselitz)",
+	        "Koeselitz_red":"red pencil (Koeselitz)",
+	        "Koeselitz_redInk":"red pencil (Koeselitz)",
+	        "N-Archiv_blue":"blue pencil (N-Archiv)",
+	        "N-Archiv_orangeBrown":"orange brown pencil (N-Archiv)",
+	        "N-Archiv_pencil":"pencil (N-Archiv?)",
+	        "N-Archiv_red":"red pencil (N-Archiv)",
+	        "N-Archiv_redInk":"red ink (N-Archiv?)",
+	        "N-Archiv_violet":"violet pencil (N-Archiv)",
+	        "N_black1":"black ink (1), N",
+	        "N_black2":"black ink (2), N",
+	        "N_black3":"black ink (3), N",
+	        "N_black4":"black ink (4), vermutlich N",
+	        "N_blue":"blue pencil (N)",
+	        "N_brown1":"brown ink (1), N",
+	        "N_brown2":"brown ink (2), N",
+	        "N_pencil":"pencil (N)",
+	        "N_red":"red pencil (N)",
+	        "typesetter_black1":"black ink (Druckerei)",
+	        "typesetter_black2":"black ink (Druckerei)",
+	        "typesetter_blue":"blue pencil (Druckerei)",
+	        "typesetter_pencil":"pencil (Druckerei)",
+	        "typesetter_red":"red pencil (Druckerei)",
+	        "unknown_pencil":"pencil (Urheber unklar)" 
+		}
     }
 }
