show note apps and prepare for menu

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -1,5 +1,8 @@
 {
     "myapp": {
+    	"menu": {
+    		"appNotes": "Anmerkungen"	
+    	},
         "title": "Nietzsche Druckmanuskripte",
         "facsimile": "Faksimile",
         "over": "auf",
