--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -1,5 +1,8 @@
 {
     "myapp": {
+    	"menu": {
+    		"appNotes": "Editor Notes"	
+    	},
         "title": "Foo",
         "facsimile": "Facsimile",
         "overwritten": "overwritten",
