page info created

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -1,7 +1,8 @@
 {
     "myapp": {
     	"menu": {
-    		"appNotes": "Anmerkungen"	
+    		"appNotes": "Anmerkungen",
+    		"pageInfo": "Seiteninformationen"
     	},
         "title": "Nietzsche Druckmanuskripte",
         "facsimile": "Faksimile",
