--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -1,7 +1,8 @@
 {
     "myapp": {
     	"menu": {
-    		"appNotes": "Editor Notes"	
+    		"appNotes": "Editor Notes",
+    		"pageInfo": "Page Information"	
     	},
         "title": "Foo",
         "facsimile": "Facsimile",
