dm and ed synoptic display, ed with dm correspondance

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -3,6 +3,7 @@
     	"menu": {
     		"appNotes": "Anmerkungen",
     		"pageInfo": "Seiteninformationen",
+    		"toggleED": "Erstdruck ein/ausblenden",
     		"toggleFacsimile": "Faksimile ein/ausblenden",
     		"toggleInfo": "Seiteninformation ein/ausblenden"
     	},
