trying to figure out why api upload works with spatia, while front-end upload results in too much spiatia

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -2,6 +2,7 @@
     "myapp": {
     	"menu": {
     		"appNotes": "Anmerkungen",
+    		"changes": "Bearbeitungsschritte",
     		"pageInfo": "Seiteninformationen",
     		"showTimeline": "Zeitstrahl anzeigen",
     		"timeline": "Zeitstrahl",
