--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -2,6 +2,7 @@
     "myapp": {
     	"menu": {
     		"appNotes": "Editor Notes",
+    		"changes": "Changes",
     		"pageInfo": "Page Information",
     		"showTimeline": "show timeline",
     		"timeline": "Timeline",
