--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -44,6 +44,7 @@
         "deleted-N_brown1": "mit brauner Tinte schraffiert",
         "strikethrough-N_brown1": "mit brauner Tinte gestrichen",
         "strikethrough-typesetter_black1": "vom Schriftsetzer gestrichen",
+        "strikethrough-Koeselitz_pencil": "von Köselitz gestrichen",
         "strikethrough": "gestrichen",
         "hand": {
 			"GSA_pencil":"Bleistift (GSA)",
