--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -44,6 +44,7 @@
         "deleted-N_brown1": "hatching with brown ink",
         "strikethrough-N_brown1": "strikethrough with brown ink",
         "strikethrough-typesetter_black1": "strikethrough by the typesetter",
+        "strikethrough-Koeselitz_pencil": "strikethrough by Köselitz",
         "strikethrough": "strikethrough",
         "hand": {
 	        "GSA_pencil":"pencil (GSA)",
