--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -3,6 +3,8 @@
     	"menu": {
     		"appNotes": "Anmerkungen",
     		"changes": "Bearbeitungsschritte",
+    		"concordance": "Konkordanz",
+    		"genesis": "Vorstufen",
     		"pageInfo": "Seiteninformationen",
     		"showTimeline": "Zeitstrahl anzeigen",
     		"timeline": "Zeitstrahl",
