Querverweise added to pageInfo

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -5,6 +5,7 @@
     		"changes": "Bearbeitungsschritte",
     		"concordance": "Konkordanz",
     		"genesis": "Vorstufen",
+    		"querverweise": "Querverweise",
     		"pageInfo": "Seiteninformationen",
     		"showTimeline": "Zeitstrahl anzeigen",
     		"timeline": "Zeitstrahl",
