--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -5,6 +5,7 @@
     		"changes": "Changes",
     		"concordance": "Concordance",
     		"genesis": "Textgenetic Versions",
+    		"querverweise": "Cross References",
     		"pageInfo": "Page Information",
     		"showTimeline": "show timeline",
     		"timeline": "Timeline",
