meta.html: showing metadata

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -13,6 +13,20 @@
     		"toggleFacsimile": "Faksimile ein/ausblenden",
     		"toggleInfo": "Seiteninformation ein/ausblenden"
     	},
+    	"meta": {
+    		"author": "Autor",
+    		"editor": "Editoren",
+    		"date": "Datum",
+    		"msDesc": "Manuskriptbeschreibung",
+    		"msIdentifier": "Manuskriptidentifikation",
+    		"publicationStmt": "Publikation",
+    		"publisher": "Publisher",
+    		"repository": "Archiv",
+    		"seriesStmt": "Serie",
+    		"sourceDesc": "Quellenbeschreibung",
+    		"titleStmt": "Titelbeschreibung",
+    		"title": "Titel"
+    	},
     	"months": {
     		"06": "Juni",
     		"07": "Juli",
