--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -61,6 +61,7 @@
         "deleted-N_brown1": "mit brauner Tinte schraffiert",
         "strikethrough-N_brown1": "mit brauner Tinte gestrichen",
         "strikethrough-typesetter_black1": "vom Schriftsetzer gestrichen",
+        "strikethrough-typesetter_black2": "mit schwarzer Tinte (Druckerei) gestrichen",
         "strikethrough-Koeselitz_pencil": "von Köselitz gestrichen",
         "strikethrough": "gestrichen",
         "hand": {
