--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -61,6 +61,7 @@
         "deleted-N_brown1": "hatching with brown ink",
         "strikethrough-N_brown1": "strikethrough with brown ink",
         "strikethrough-typesetter_black1": "strikethrough by the typesetter",
+        "strikethrough-typesetter_black2": "strikethrough by the typesetter 2",
         "strikethrough-Koeselitz_pencil": "strikethrough by Köselitz",
         "strikethrough": "strikethrough",
         "hand": {
