--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -16,7 +16,7 @@
     		"genesis": "Textgenetic Versions",
     		
     		"querverweise": "Cross References",
-    		"pageInfo": "Page Information",
+    		"pageInfo": "Manuscript Description",
     		"showTimeline": "show timeline",
     		"timeline": "Timeline",
     		"toggleED": "toggle first edition",
