working on metadata

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -27,6 +27,20 @@
     		"author": "Autor",
     		"editor": "Editoren",
     		"date": "Datum",
+    		"descChapter1": "1. Manuskript",
+    		"descChapter2": "2. Inhalt",
+    		"descChapter21": "2.1 Inhaltsverzeichnis",
+    		"descChapter3": "3. Manuskriptbeschreibung",
+    		"descChapter31": "3.1 Frühere Manuskriptbeschreibung",
+    		"descChapter32": "3.2 Manuskriptbeschreibung",
+    		"descChapter33": "3.3 Manuskriptblätter",
+    		"descChapter34": "3.4 Paginierung, Foliierung",
+    		"descChapter35": "3.5 Bearbeitungsspuren fremder Hand",
+    		"descChapter4": "4. Entstehungs- und Druckgeschichte",
+    		"descChapter5": "5. Chronik",
+    		"descChapter6": "6. Schreibmittel und Schreiberhände",
+    		"descChapter7": "7. Bibliographie",
+    		"descChapter8": "8. Siglen und Abkürzungen",
     		"handNotes": "Hände und Schreibmittel",
     		"msDesc": "Manuskriptbeschreibung",
     		"msIdentifier": "Manuskriptidentifikation",
@@ -36,7 +50,7 @@
     		"seriesStmt": "Serie",
     		"sourceDesc": "Quellenbeschreibung",
     		"titleStmt": "Titelbeschreibung",
-    		"title": "Titel"
+    		"title": "Metadaten"
     	},
     	"months": {
     		"06": "Juni",
