--- a/resources/i18n/app/en.json
+++ b/resources/i18n/app/en.json
@@ -27,6 +27,20 @@
     		"author": "Author",
     		"editor": "Editors",
     		 "date": "Datum",
+    		 "descChapter1": "1. Manuskript",
+    		"descChapter2": "2. Inhalt",
+    		"descChapter21": "2.1 Inhaltsverzeichnis",
+    		"descChapter3": "3. Manuskriptbeschreibung",
+    		"descChapter31": "3.1 Frühere Manuskriptbeschreibung",
+    		"descChapter32": "3.2 Manuskriptbeschreibung",
+    		"descChapter33": "3.3 Manuskriptblätter",
+    		"descChapter34": "3.4 Paginierung, Foliierung",
+    		"descChapter35": "3.5 Bearbeitungsspuren fremder Hand",
+    		"descChapter4": "4. Entstehungs- und Druckgeschichte",
+    		"descChapter5": "5. Chronik",
+    		"descChapter6": "6. Schreibmittel und Schreiberhände",
+    		"descChapter7": "7. Bibliographie",
+    		"descChapter8": "8. Siglen und Abkürzungen",
     		 "handNotes": "Hands and Instruments",
     		 "msDesc": "Manuscript Description",
     		 "msIdentifier": "Manuscript Identification",
@@ -36,7 +50,7 @@
     		"repository": "Repository",
     		"sourceDesc": "Source Description",
     		"titleStmt": "Title Statement",
-    		"title": "Title"
+    		"title": "Metadata"
     	},
     	"months": {
     		"06": "June",
