metadata for docs

--- a/resources/i18n/app/de.json
+++ b/resources/i18n/app/de.json
@@ -36,6 +36,9 @@
     		"descChapter33": "3.3 Manuskriptblätter",
     		"descChapter34": "3.4 Paginierung, Foliierung",
     		"descChapter35": "3.5 Bearbeitungsspuren fremder Hand",
+    		"EDdescChapter3": "3. Beschreibung",
+    		"EDdescChapter31": "3.1 Frühere Beschreibung",
+    		"EDdescChapter32": "3.2 Beschreibung",
     		"descChapter4": "4. Entstehungs- und Druckgeschichte",
     		"descChapter5": "5. Chronik",
     		"descChapter6": "6. Schreibmittel und Schreiberhände",
